<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4bb6ef"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="post1"
                card_view:cardBackgroundColor="#FFF"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/post1"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:weightSum="3"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/post1_H"
                            android:textSize="18dp"
                            android:textColor="#000000"
                            android:gravity="center"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:text="@string/post1_h"
                            android:textSize="15dp"
                            android:textColor="#000000"
                            android:gravity="center"
                            />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="post2"
                card_view:cardBackgroundColor="#FFF"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/post2"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:weightSum="3"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/post2_H"
                            android:textSize="20dp"
                            android:textColor="#000000"
                            android:gravity="center"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:text="@string/post2_h"
                            android:textSize="15dp"
                            android:textColor="#000000"
                            android:gravity="center"
                            />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="post3"
                card_view:cardBackgroundColor="#FFF"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/post3"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:weightSum="3"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/post3_H"
                            android:textSize="16dp"
                            android:textColor="#000000"
                            android:gravity="center"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:text="@string/post3_h"
                            android:textSize="15dp"
                            android:textColor="#000000"
                            android:gravity="center"
                            />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="325dp"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="post4"
                card_view:cardBackgroundColor="#FFF"
                card_view:cardCornerRadius="15dp"
                card_view:cardElevation="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="3"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:adjustViewBounds="true"
                        android:src="@drawable/post4"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:weightSum="3"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/post4_H"
                            android:textSize="17dp"
                            android:textColor="#000000"
                            android:gravity="center"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:text="@string/post4_h"
                            android:textSize="15dp"
                            android:textColor="#000000"
                            android:gravity="center"
                            />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>